Fix item height overflow

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ body {
 
 .item {
     flex-basis: 20vw;
-    min-height: 60vh;
+    min-height: 70vh;
     min-width: 350px;
     border: 2px solid white;
     border-radius: 10px;
